overflow bug fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -131,6 +131,7 @@ body {
 body,
 * {
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 
